pxc/tests/test_031_thrattr/nots.px

public namespace nots;
import common -;

tsvaluetype struct bar {
  public int z;
}

tsvaluetype struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  vector{bar} bv; // error: not tsvaluetype
  tiptr{bar} bp = make_tiptr{bar}(bx);
  public function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

